force-app/main/default/objects/Activity/fields/Depends_On__c.field-meta.xml
<CustomField>
    <fullName>Depends_On__c</fullName>
    <label>Depends On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>