force-app/main/default/objects/Activity/fields/Run_Flow__c.field-meta.xml
<CustomField>
    <fullName>Run_Flow__c</fullName>
    <formula>IF(AND(!ISBLANK(Task_List_Template_Item__r.Flow_Name__c), OR(TEXT(Status) = &#39;Open&#39;,TEXT(Status) = &#39;Rejected&#39;) ), HYPERLINK(&#39;/lightning/cmp/sfims__RunTaskFlow#recordId=&#39;+Id, &#39;Run Flow&#39;,&#39;_self&#39;), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Flow</label>
    <type>Text</type>
</CustomField>