force-app/main/default/objects/Activity/fields/Task_List_Template_Item__c.field-meta.xml
<CustomField>
    <fullName>Task_List_Template_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task List Template Item</label>
    <referenceTo>Task_List_Template_Item__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>